freest/test/prog/Invalid/Typing/MultiVarTypeSigNoBind/MultiVarTypeSigNoBind.fst
module MultiVarTypeSigNoBind where

x, y, z : Int 
x = 1
y = 2
